# base

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  base.cpp  base.h  globals.cpp  globals.h
src/database/: CMakeLists.txt  db.cpp  db.h
src/database/addressdb/: CMakeLists.txt  addressdb.cpp  addressdb.h
src/database/transactiondb/: CMakeLists.txt  transactiondb.cpp  transactiondb.h
src/database/walletdb/: CMakeLists.txt  walletdb.cpp  walletdb.h
src/globalsources/: CMakeLists.txt  ctransactions.cpp
src/internetRelayChat/: CMakeLists.txt  irc.cpp  irc.h
src/miner/: CMakeLists.txt  miner.cpp  miner.h
src/network/: CMakeLists.txt  net.cpp  net.h
src/script/: CMakeLists.txt  impl.cpp  script.h  scriptfunctions.cpp
src/shared/: CMakeLists.txt  base58.cpp  base58.h  bignum.h  key.h  serialize.h  sha.cpp  sha.h  types.h  uint256.h  utils.cpp  utils.h
